# keyboard-layouts

./: .gitignore  Cargo.toml
examples/: kbsim.rs  strokes.rs
gen_layouts_sys/: Cargo.toml
gen_layouts_sys/src/: generated.rs  lib.rs  types.rs
src/: lib.rs
tests/: all_layouts.rs.old
