[package]
name = "keyboard-layouts"
version = "0.4.0"
authors = [
    "chris ricketts <chris.ricketts@steribar.com>",
    "Piorpie <contact@piorpie.com>",
]
edition = "2024"
description = "Keyboard layout keymaps with an API to generate HID packets"
readme = "README.md"
keywords = ["keyboard", "layouts", "hid"]
exclude = [".gitignore"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Chris-Ricketts/keyboard-layouts"

[lib]
name = "keyboard_layouts"
path = "src/lib.rs"

[[bin]]
name = "kbsim"
path = "src/bin/kbsim.rs"

[dependencies]
gen_layouts_sys = { path = "gen_layouts_sys", version = "0.3.0", features = [] }
bytes = "1.11.1"
structopt = "0.3.26"
log = "0.4.29"
heapless = "0.9.2"

[dev-dependencies]
# tokio-linux-uhid = "0.3.2"
# futures = "0.3.32"
# tokio-core = "0.1.18"
# bytes = "1.11.1"
# pretty_assertions = "1.4.1"
# maplit = "1.0.2"
# lazy_static = "1.5.0"
