[package]
name = "keyboard-layouts"
version = "0.5.1"
authors = [
    "chris ricketts <chris.ricketts@steribar.com>",
    "Piorpie <contact@piorpie.com>",
]
edition = "2024"
description = "Keyboard layout keymaps with an API to generate HID packets"
readme = "README.md"
keywords = ["keyboard", "layouts", "hid"]
exclude = [".gitignore"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Chris-Ricketts/keyboard-layouts"

[lib]
name = "keyboard_layouts"
path = "src/lib.rs"

[dependencies]
gen_layouts_sys = { path = "gen_layouts_sys", version = "0.3.0", features = [] }
bytes = { version = "1.11.1", default-features = false }
log = "0.4.29"
heapless = "0.9.2"

[dev-dependencies]
structopt = "0.3.26"
