[package]
name = "gen_layouts_sys"
version = "0.3.0"
authors = ["chris ricketts <chris.ricketts@steribar.com>"]
edition = "2024"
description = "Generated keyboard layouts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Chris-Ricketts/keyboard-layouts"

[features]
generate = ["bindgen", "quote", "syn", "regex", "proc-macro2"]

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }
quote = { version = "1.0.45", optional = true }
syn = { version = "2.0.117", features = [
    "full",
    "extra-traits",
], optional = true }
regex = { version = "1.12.3", optional = true }
proc-macro2 = { version = "1.0.106", optional = true }
